add more monsters, add boss, add atk_num

--- a/index.html
+++ b/index.html
@@ -4,39 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="static/style.css">
 
-    <title>ShowZombie</title>
-    <script src="shotzombie.js"></script>
+    <title>ShotMonster - Maplestory</title>
+    <script src="shotmonster.js"></script>
 </head>
 <body>
- <div id="background">
-    <div id="score_bar">
+  <div id="game">
+      <div id="score_bar">
         <div id="score_text">Score:</div>
         <div id="score">0</div>
-    </div>
-    <div id="wrapper_out" class="container">
+      </div>
+      <div id="wrapper_out" class="container">
         <!-- <div class="wrapper_box" id="box_0">
             <img src="static/wind.png" class="item">
             <img src="static/wind.png" class="item">
             <img src="static/wind.png" class="item">
         </div> -->
-    </div>
-    <div class="container mt-5">Key pressed:<div id="keypressed"></div></div>
+        <!-- <div class="wrap-atk-num">
+          <img src="static/atk_4.png" class="atk-num">
+          <img src="static/atk_0.png" class="atk-num">
+          <img src="static/atk_9.png" class="atk-num">
+          <img src="static/atk_3.png" class="atk-num">
+        </div> -->
+        <div class="wrapper_boss_box" style="display:none;">
+            <div class="boss boss-alive" onclick="hitBoss()" id="boss"></div>
+        </div>
+      </div>
+      <div id="wrap-keypress">Key pressed:<div id="keypressed"></div></div>
+  </div>
 
-
-  
-        <footer class="text-muted bottom" id="foot">
-          <div class="container footer_title">
-            <hr>
-            <h3> Shotzombie<sup>by浩浩</sup></h3>
-            <p>Copyright © 2019 浩浩&華華 All Rights Reserved.</p>
-            <hr>
-          </div>
-        </footer>
-    </div>
-        
-
+  <footer id="foot">
+      <div class="footer_title">
+        <h3>Shotzombie<sup>by浩浩</sup></h3>
+        <p>Copyright © 2019 浩浩&華華 All Rights Reserved.</p>
+      </div>
+  </footer>
 </body>
 </html>
